enabling eureka configuration to true

--- a/gatewayserver.yml
+++ b/gatewayserver.yml
@@ -4,7 +4,7 @@ server:
 
 
   client:
-    fetch-registry: false
-    register-with-eureka: false
+    fetch-registry: true
+    register-with-eureka: true
     service-url:
       defaultZone: http://localhost:8070/eureka/
