--- a/gatewayserver.yml
+++ b/gatewayserver.yml
@@ -2,9 +2,9 @@ server:
   port: 8072
 
 
-
+eureka:
   client:
-    fetch-registry: true
-    register-with-eureka: true
+    fetch-registry: false
+    register-with-eureka: false
     service-url:
-      defaultZone: http://localhost:8070/eureka/
+      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
