--- a/gatewayserver.yml
+++ b/gatewayserver.yml
@@ -4,7 +4,7 @@ server:
 
 eureka:
   client:
-    fetch-registry: false
-    register-with-eureka: false
+    fetch-registry: true   # allows the Gateway to know other services
+    register-with-eureka: true  # allows Gateway to register itself
     service-url:
-      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+      defaultZone: http://localhost:8070/eureka/
